--- a/FakeSite/popup.html
+++ b/FakeSite/popup.html
@@ -1,31 +1,21 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Getting Started Extension's Popup</title>
+<head>
+    <title>Daily Affirmations</title>
     <style>
-      body {
-        min-width: 357px;
-        overflow-x: hidden;
-      }
-
-      img {
-        margin: 5px;
-        border: 2px solid black;
-        vertical-align: middle;
-        width: 75px;
-        height: 75px;
-      }
+        body {
+            min-width: 400px;
+            overflow-x: hidden;
+        }
     </style>
 
-    <!--
-      - JavaScript and HTML must be in separate files: see our Content Security
-      - Policy documentation[1] for details and explanation.
-      -
-      - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
-     -->
     <script src="popup.js"></script>
-  </head>
-  <body>
-  </body>
+</head>
+<body style="background-color: #323232">
+    <div style="color: white; font-size: 20px; text-align: center; font-weight: bolder; margin-top: 10px; margin-bottom: 10px">
+        <img src="icon-128.png" width="75" height="75" />
+        <p id="textBox" style="margin: 5px 0"></p>
+    </div>
+</body>
 </html>
 
