Added default bootstrap site

--- a/AzureSite/contact.html
+++ b/AzureSite/contact.html
@@ -40,9 +40,9 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="homework.html">Homework</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li class="active"><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -50,8 +50,8 @@
 
     <div class="container">
       <div class="starter-template">
-        <h1>Home</h1>
-        <p class="lead">Test Home Content Test Home Content<br> Test Home Content Test Home Content Test Home Content Test Home Content Test Home Content</p>
+        <h1>Contact</h1>
+        <p class="lead">Test Contact Content Test Contact Content<br> Test Contact Content Test Contact Content Test Contact Content Test Contact Content Test Homework Content</p>
       </div>
     </div><!-- /.container -->
 
