--- a/AzureSite/homework.html
+++ b/AzureSite/homework.html
@@ -40,7 +40,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li class="active"><a href="homework.html">Homework</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
