--- a/AzureSite/home.html
+++ b/AzureSite/home.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" style="font-weight:bolder;color:#00AA8C" href="#">Man-In-The-Middle Attacks</a>
+          <a class="navbar-brand" style="font-weight:bolder;color:#00AA8C" href="home.html">Man-In-The-Middle Attacks</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
