--- a/AzureSite/contact.html
+++ b/AzureSite/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,47 +13,43 @@
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <style>
-      body {
-        padding-top: 50px;
-      }
+    <link href="css/site.css" rel="stylesheet">
+</head>
 
-      .starter-template {
-        padding: 40px 15px;
-        text-align: center;
-      }
-    </style>
-  </head>
-
-  <body>
+<body>
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" style="font-weight:bolder;color:#00AA8C" href="home.html">Man-In-The-Middle Attacks</a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" style="font-weight: bolder; color: #00AA8C" href="home.html">Man-In-The-Middle Attacks</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="homework.html">Homework</a></li>
+                    <li class="active"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="home.html">Home</a></li>
-            <li><a href="homework.html">Homework</a></li>
-            <li class="active"><a href="contact.html">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </div>
 
     <div class="container">
-      <div class="starter-template">
-        <h1>Contact</h1>
-        <p class="lead">Test Contact Content Test Contact Content<br> Test Contact Content Test Contact Content Test Contact Content Test Contact Content Test Homework Content</p>
-      </div>
-    </div><!-- /.container -->
+        <div class="starter-template">
+            <h1>Contact</h1>
+            <p class="lead">
+                Test Contact Content Test Contact Content<br>
+                Test Contact Content Test Contact Content Test Contact Content Test Contact Content Test Homework Content
+            </p>
+        </div>
+    </div>
+    <!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -61,5 +57,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-  </body>
+</body>
 </html>
