--- a/AzureSite/homework.html
+++ b/AzureSite/homework.html
@@ -1,59 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="shortcut icon" href="../../assets/ico/favicon.ico">-->
+    
+    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <style>
-      body {
-        padding-top: 50px;
-      }
+    <link href="css/site.css" rel="stylesheet">
+</head>
 
-      .starter-template {
-        padding: 40px 15px;
-        text-align: center;
-      }
-    </style>
-  </head>
-
-  <body>
+<body>
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" style="font-weight:bolder;color:#00AA8C" href="home.html">Man-In-The-Middle Attacks</a>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" style="font-weight: bolder; color: #00AA8C" href="home.html">Man-In-The-Middle Attacks</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="home.html">Home</a></li>
+                    <li class="active"><a href="homework.html">Homework</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="home.html">Home</a></li>
-            <li class="active"><a href="homework.html">Homework</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </div>
 
     <div class="container">
-      <div class="starter-template">
-        <h1>Homework</h1>
-        <p class="lead">Test Homework Content Test Homework Content<br> Test Homework Content Test Homework Content Test Homework Content Test Homework Content Test Homework Content</p>
-      </div>
-    </div><!-- /.container -->
+        <div class="starter-template">
+            <h1>Man-In-The-Middle (MitM) Attack Homework</h1>
+            <h3 style="text-decoration: underline">Part 2: Man-In-The-Browser Attack - Google Chrome Extension</h3>
+            <br />
+
+            <h4><b>The Goal</b></h4>
+            <p>
+                For this part of the homework, we will be looking at a different type of man-in-the-middle attack. 
+                The previous sections focused on using tools that have already been created for us to insert 
+                ourselves into known attack vectors and perform man-in-the-middle attacks. We will be making a 
+                Google Chrome extension from scratch to grab information about a user's activity. For this exercise,
+                we will focus on obtaining a user's username and password for a website like Facebook.com
+            </p>
+
+            <br />
+
+            <h4><b>Getting Started</b></h4>
+            <ol>
+                <li>
+                    <p>You will need to first download and install <a href="www.google.com/chrome">Google Chrome</a>.</p>
+                </li>
+            </ol>
+            <p>
+                All of our testing and development was done on a Windows computer, but you should also be able to use 
+                Chrome and create Chrome extensions on other operating systems like OSX, Linux, and Chrome OS (Chromebooks).
+            </p>
+            <ol start="2">
+                <li>
+                    <p>Have your text editor of choice ready to use.</p>
+                </li>
+                <li>
+                    <p>Open Chrome and navigate to <a href="chrome://extensions/">chrome://extensions/</a> from the browser's address bar and enable "Developer mode".</p>
+                </li>
+            </ol>
+            <p>
+                This allows us to create and load unpacked extensions that are not distributed through the Chrome Web Store.
+            </p>
+            <img src="images\dev-mode.png" width="80%"></img>
+
+            <br />
+            <br />
+
+            <h4><b>Creating A Google Chrome Extension</b></h4>
+            <ol start="4">
+                <li>
+                    <p>Create a folder on your computer and name it whatever you want.</p>
+                </li>
+            </ol>
+            <p>
+                I named mine "Daily Affirmations. You'll see why soon."
+            </p>
+            <ol start="5">
+                <li>
+                    <p>
+                        Download the following files to your new folder. (Right-click to "Save link as...")
+                        <ul>
+                            <li><a href="images/icon-128.png">icon-128.png</a></li>
+                            <li><a href="images/icon-16.png">icon-16.png</a></li>
+                            <li><a href="images/icon-19.png">icon-19.png</a></li>
+                            <li><a href="images/icon-48.png">icon-48.png</a></li>
+                        </ul>
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Create a new file in that folder named "manifest.json"
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Copy the following text into the "manifest.json" file.
+                    </p>
+                </li>
+            </ol>
+            <p>
+                <pre class="prettyprint lang-js">
+<code>{
+    "manifest_version": 2,
+
+    "name": "Daily Affirmations",
+    "description": "This extension displays daily affirmations",
+    "version": "1.0",
+
+    "icons": {
+        "128": "icon-128.png",
+        "16": "icon-16.png",
+        "48": "icon-48.png"
+    },
+
+    "permissions": [
+        "tabs", "activeTab", "http://*/", "https://*/"
+    ],
+
+    "background": {
+        "scripts": ["background.js"]
+    },
+
+    "browser_action": {
+        "default_icon": "icon-19.png",
+        "default_popup": "popup.html"
+    }
+}</code>
+                </pre>
+            </p>
+            <p>
+                This file is what describes everything about our extension to Chrome. Some sections to note:
+                <dl>
+                    <dt>name</dt>
+                    <dd>The name displayed for our extension</dd>
+                    <dt>description</dt>
+                    <dd>The description displayed for our extension</dd>
+                    <dt>icons</dt>
+                    <dd>Defines all of the different sizes of icons to be displayed in different part of the browser</dd>
+                    <dt>permissions</dt>
+                    <dd>Defines which capabilities that we need permission to use. For example, we need to access the browser's tabs and have access to any webpage loaded in the browser. We could specify a more specific URL like "http://www.facebook.com" but we will use the more general one for the purposes of this exercise.</dd>
+                    <dt>background</dt>
+                    <dd>Defines scripts and HTML pages that are run in the background. The defined background.js file is where most of our code will be.</dd>
+                    <dt>broswer_action</dt>
+                    <dd>This is where we define the icon that is shown to the right of the address bar as well as the HTML that is shown when we click that button. We will use this HTML to perform some functionality for a user that would make them want to download our extension without realizing some more sinister capabilities are lurking underneath.</dd>
+                </dl>
+            </p>
+            <ol start="8">
+                <li>
+                    <p>
+                        Create a file in your folder named "popup.js" and copy the following text into that file.
+                    </p>
+                </li>
+            </ol>
+            <p>
+                <pre class="prettyprint lang-js">
+<code>document.addEventListener( 'DOMContentLoaded', function () {
+   window.onload = function () {
+      var affirmations =
+          [
+              "You are pretty much the coolest person ever!",
+              "How did you become so awesome?",
+              "Nobody can compare to you!",
+              "Your awesomeness is overwhelming!",
+              "Who has two thumbs and is the coolest person in the world? You are!"
+          ];
+
+      var randNum = Math.floor( Math.random() * affirmations.length );
+      document.getElementById( "textBox" ).innerHTML = affirmations[randNum];
+   }
+} );</code>
+                </pre>
+            </p>
+            <ol start="9">
+                <li>
+                    <p>
+                        Create a file in your folder named "popup.html" and copy the following text into that file.
+                    </p>
+                </li>
+            </ol>
+            <p>
+                <pre class="prettyprint lang-html">
+<code>&lt;!doctype html&gt;
+&lt;html&gt;
+&lt;head&gt;
+    &lt;title&gt;Daily Affirmations&lt;/title&gt;
+    &lt;style&gt;
+        body {
+            min-width: 400px;
+            overflow-x: hidden;
+        }
+    &lt;/style&gt;
+
+    &lt;script src=&quot;popup.js&quot;&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body style=&quot;background-color: #323232&quot;&gt;
+    &lt;div style=&quot;color: white; font-size: 20px; text-align: center; font-weight: bolder; margin-top: 10px; margin-bottom: 10px&quot;&gt;
+        &lt;img src=&quot;icon-128.png&quot; width=&quot;75&quot; height=&quot;75&quot; /&gt;
+        &lt;p id=&quot;textBox&quot; style=&quot;margin: 5px 0&quot;&gt;&lt;/p&gt;
+    &lt;/div&gt;
+&lt;/body&gt;
+&lt;/html&gt;</code>
+                </pre>
+            </p>
+        </div>
+    </div>
+    <!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -61,5 +229,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-  </body>
+</body>
 </html>
