Added more homework pages

--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="shortcut icon" href="../../assets/ico/favicon.ico">-->
+
+    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
     <title>Man-In-The-Middle Attacks</title>
 
@@ -31,10 +32,10 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="home.html">Home</a></li>
-                    <li class="dropdown"><a href="homework.html" class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
+                    <li><a href="home.html">Home</a></li>
+                    <li class="active dropdown"><a href="homework.html" class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="homework1.html">Part 1: HTTP Sniffing</a></li>
+                            <li class="active"><a href="homework1.html">Part 1: HTTP Sniffing</a></li>
                             <li><a href="homework2.html">Part 2: Chrome Extension</a></li>
                             <li><a href="deliverables.html">Devliverables</a></li>
                         </ul>
@@ -42,16 +43,31 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
-            <!--/.nav-collapse -->
         </div>
     </div>
 
     <div class="container">
         <div class="starter-template">
-            <h1>Home</h1>
-            <p class="lead">
-                Test Home Content Test Home Content<br>
-                Test Home Content Test Home Content Test Home Content Test Home Content Test Home Content
+            <h2 style="text-decoration: underline">Homework Part 1: HTTP Sniffing</h2>
+            <br />
+
+            <h3><b>The Goal</b></h3>
+            <p>
+                Blah Blah Blah
+            </p>
+
+            <br />
+
+            <h3><b>Getting Started</b></h3>
+            <p>
+                Blah Blah Blah Blah Blah BlahBlah Blah Blah
+            </p>
+
+            <br />
+
+            <h3><b>The Rest</b></h3>
+            <p>
+                Blah Blah Blah Blah Blah BlahBlah Blah Blah
             </p>
         </div>
     </div>
