--- a/AzureSite/deliverables.html
+++ b/AzureSite/deliverables.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="shortcut icon" href="../../assets/ico/favicon.ico">-->
+
+    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
     <title>Man-In-The-Middle Attacks</title>
 
@@ -31,28 +32,41 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="home.html">Home</a></li>
-                    <li class="dropdown"><a href="homework.html" class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
+                    <li><a href="home.html">Home</a></li>
+                    <li class="active dropdown"><a href="homework.html" class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="homework1.html">Part 1: HTTP Sniffing</a></li>
                             <li><a href="homework2.html">Part 2: Chrome Extension</a></li>
-                            <li><a href="deliverables.html">Devliverables</a></li>
+                            <li class="active"><a href="deliverables.html">Devliverables</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
-            <!--/.nav-collapse -->
         </div>
     </div>
 
     <div class="container">
         <div class="starter-template">
-            <h1>Home</h1>
-            <p class="lead">
-                Test Home Content Test Home Content<br>
-                Test Home Content Test Home Content Test Home Content Test Home Content Test Home Content
-            </p>
+            <h2 style="text-decoration: underline">Homework Deliverables</h2>
+            <br />
+
+            <h3><b>Part 1 Deliverables - HTTP Sniffing</b></h3>
+            <p>Turn all of this stuff in yo!</p>
+
+            <h3><b>Part 2 Deliverables - Chrome Extension</b></h3>
+            <p>The extension should meet the following criteria</p>
+            <ul>
+                <li>The default functionality should still work and pop up friendly messages when the smiley face button is clicked.</li>
+                <li>When a user logs in to Facebook, the user's email and password should be displayed in an alert box.</li>
+                <li>After your extensions displays the user's email and password, the Facebook login should still proceed normally.</li>
+                <li>A user should not be able to tell anything else is going on besides logging into Facebook. (Except for the alert box popping up)</li>
+            </ul>
+            <p>Deliverables</p>
+            <ul>
+                <li>Place a screenshot of your extension popping up a message box containing the entered email and password into the folder for your extension.</li>
+                <li>Zip up your entire extension's folder and send it to us.</li>
+            </ul>
         </div>
     </div>
     <!-- /.container -->
