--- a/AzureSite/homework2.html
+++ b/AzureSite/homework2.html
@@ -33,7 +33,13 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="home.html">Home</a></li>
-                    <li class="active"><a href="homework.html">Homework</a></li>
+                    <li class="active dropdown"><a href="homework.html" class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="homework1.html">Part 1: HTTP Sniffing</a></li>
+                            <li class="active"><a href="homework2.html">Part 2: Chrome Extension</a></li>
+                            <li><a href="deliverables.html">Devliverables</a></li>
+                        </ul>
+                    </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -42,8 +48,7 @@
 
     <div class="container">
         <div class="starter-template">
-            <h1>Man-In-The-Middle (MitM) Attack Homework</h1>
-            <h3 style="text-decoration: underline">Part 2: Man-In-The-Browser Attack - Google Chrome Extension</h3>
+            <h3 style="text-decoration: underline">Homework Part 2: Man-In-The-Browser Attack - Google Chrome Extension</h3>
             <br />
 
             <h3><b>The Goal</b></h3>
@@ -348,6 +353,9 @@ if ( div ) {
                     <iframe type="text/html" frameborder="0" scrolling="no" style="overflow: hidden;" src="http://www.screencast.com/users/Bubbs/folders/Testing/media/75f5cd96-5b9e-41e2-8589-b5ad0b5876c9/embed" height="580" width="1046"></iframe>
                 </object>
             </p>
+            
+            <br/>
+
             <h3><b>Part 2 Deliverables</b></h3>
             <p>
                 <ul>
