--- a/AzureSite/contact.html
+++ b/AzureSite/contact.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="home.html">Home</a></li>
-                    <li class="dropdown"><a href="homework.html" class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="homework1.html">Part 1: HTTP Sniffing</a></li>
                             <li><a href="homework2.html">Part 2: Chrome Extension</a></li>
