--- a/AzureSite/homework2.html
+++ b/AzureSite/homework2.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="home.html">Home</a></li>
-                    <li class="active dropdown"><a href="homework.html" class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
+                    <li class="active dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="homework1.html">Part 1: HTTP Sniffing</a></li>
                             <li class="active"><a href="homework2.html">Part 2: Chrome Extension</a></li>
@@ -48,7 +48,7 @@
 
     <div class="container">
         <div class="starter-template">
-            <h3 style="text-decoration: underline">Homework Part 2: Man-In-The-Browser Attack - Google Chrome Extension</h3>
+            <h2 style="text-decoration: underline">Homework Part 2: Man-In-The-Browser Attack - Google Chrome Extension</h2>
             <br />
 
             <h3><b>The Goal</b></h3>
