Adding quick-start .zip file

--- a/AzureSite/homework2.html
+++ b/AzureSite/homework2.html
@@ -223,6 +223,13 @@
 &lt;/body&gt;
 &lt;/html&gt;</code></pre>
             </p>
+            <ol start="10">
+                <li>
+                    <p>
+                        Create a file in your folder named "background.js" and leave it empty for now.
+                    </p>
+                </li>
+            </ol>          
 
             <br />
 
@@ -262,7 +269,7 @@
             <ol start="13">
                 <li>
                     <p>
-                        Create a file in your folder named "background.js" and copy the following text into that file.
+                        Copy the following text into your "background.js" file.
                     </p>
                 </li>
             </ol>
