Fixing paths in homework HTML

--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -152,7 +152,7 @@
             <p>TCP sniffing will allow you to see low level individual packets that are being sent across a network.</p>
             <ol start="9">
                 <li>
-                    <p>Run "wget http://mitm.azurewebsites.net/AzureSite/files/tcp_client>"</p>
+                    <p>Run "wget http://mitm.azurewebsites.net/AzureSite/files/tcp_client.bin>"</p>
                 </li>
                 <li>
                     <p>Run "tcp_client". This will send TCP traffic for you to monitor.</p>
@@ -165,7 +165,7 @@
             <p>HTTP sniffing will allow you to see higher level web requests being sent across a network. Under the hood, each of these HTTP requests is made up of multple TCP packets.</p>
             <ol start="12">
                 <li>
-                    <p>Run "wget http://mitm.azurewebsites.net/AzureSite/files/http_client>"</p>
+                    <p>Run "wget http://mitm.azurewebsites.net/AzureSite/files/http_client.bin>"</p>
                 </li>
                 <li>
                     <p>Run "http_client". This will send HTTP traffic for you to monitor.</p>
@@ -178,7 +178,7 @@
             <p>HTTPS sniffing will allow you to see higher level web requests similar to HTTP requests. The requests payload in these cases are considered secure and will appear encrypted.</p>
             <ol start="15">
                 <li>
-                    <p>Run "wget http://mitm.azurewebsites.net/AzureSite/files/https_client>"</p>
+                    <p>Run "wget http://mitm.azurewebsites.net/AzureSite/files/https_client.bin>"</p>
                 </li>
                 <li>
                     <p>Run "https_client". This will send HTTPS traffic for you to monitor.</p>
