OpenSSL homework done

--- a/AzureSite/homework1.html
+++ b/AzureSite/homework1.html
@@ -187,6 +187,52 @@
                     <p>Observe the traffic in Wireshark and report what you see by taking a screenshot.</p>
                 </li>
             </ol>
+
+            <br />
+
+            <h3><b>OpenSSL</b></h3>
+            <p>
+                For this part of the homework, you will be looking at how OpenSSL is setup on a Linux server 
+                that we have created. You will then establish a connection with that server based on the 
+                information that you find. The server's IP address is 138.91.119.153.
+            </p>
+            <ol start="18">
+                <li>
+                    <p>Run "sslscan" on the server.</p>
+                </li>
+                <li>
+                    <p>What is the lowest version of SSL supported by the server?</p>
+                </li>
+                <li>
+                    <p>What are the server's preferred ciphers?</p>
+                </li>
+                <li>
+                    <p>Use "openssl" to establish a connection with our server using the preferred SSL cipher. Use Wireshark to capture this activity.</p>
+                </li>
+                <li>
+                    <p>
+                        Turn in a screenshot of the "Client Hello" request with the "Cipher Suites" section expanded under the "Scure Sockets Layer". 
+                        You can get to this information by double-clicking the message that you want to look at.
+                    </p>
+                </li>
+                <li>
+                    <p>What was the "openssl" command that you used?</p>
+                </li>
+            </ol>
+
+            <br />
+
+            <h3><b>SSL DOS</b></h3>
+            <p>Some stuff will go here</p>
+
+            <br />
+
+            <h3><b>SSL Stripping</b></h3>
+            <ol start="24">
+                <li></li>
+            </ol>
+            <br />
+
             <h3><b>Part [TODO] Deliverables</b></h3>
             <ul>
                 <li>[TODO]</li>
